010_create_pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: rover-service
spec:
  containers:
  - name: rover-service
    imagePullPolicy: IfNotPresent
    image: rover-service:latest
    ports:
    - containerPort: 8080
