020_create_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rover-service
  labels:
    app: rover
    tier: backend
spec:
  selector:
    matchLabels:
      app: rover-service
  template:
    metadata:
      labels:
        app: rover-service
    spec:
      containers:
      - name: rover-service
        imagePullPolicy: Always
        image: rover-service:latest
        ports:
          - containerPort: 8080
