030_create_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rover-service
  labels:
    app: rover-service
    tier: backend
spec:
  selector:
    app: rover-service
  type: NodePort
  ports:
    - port: 8090
      name: web
      targetPort: 8080
