060_create_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rover-ui
  labels:
    app: rover-ui
    tier: frontend
spec:
  selector:
    app: rover-ui
  type: NodePort
  ports:
    - port: 8095
      name: web
      targetPort: 80
