070_create_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rover-ui
spec:
  rules:
    - host: rover-service.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rover-ui
                port:
                  number: 8095
